Deleted my delicious username from reader.html

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 ﻿# インストール方法
-1. すべてのファイルを zip で固める
-2. 出来上がった zip の拡張子を oex に変更
-3. Opera にドラッグアンドドロップ
+1. reader.html の USERNAME を自分のユーザ名に変更 (設定画面つくる)
+2. すべてのファイルを zip で固める
+3. 出来上がった zip の拡張子を oex に変更
+4. Opera にドラッグアンドドロップ
